# budget-app

./: .gitignore  LICENSE  pyproject.toml
budget_app/: __init__.py  budget_app.py  rxconfig.py
budget_app/components/: charts.py  forms.py  layout.py  tables.py
budget_app/database/: db.py
budget_app/models/: base.py  expense.py  income.py
budget_app/pages/: expenses.py  incomes.py  summary.py
budget_app/services/: expense_service.py  income_service.py
budget_app/states/: app_state.py  expense_state.py  income_state.py
dashboard/: dashboard.py  read_xls.py
dashboard/components/: sidebar.py
dashboard/database/: models.py  operations.py
dashboard/expenses/: model.py  page.py  state.py  view.py
dashboard/llm/: llm_call.py  prompt.py
dashboard/pages/: __init__.py  about.py  index.py  profile.py  table.py
dashboard/templates/: template.py
dashboard/utils/: file_processor.py  file_reader.py  read_file.py
dashboard/views/: charts.py  table.py
docker/: docker-compose.yaml
requirements/: requirements.txt
