[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budget-app"
dynamic = ["version"]
description = 'Personal app for budget management'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "BorjaIP"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/BorjaIP/budget-app#readme"
Issues = "https://github.com/BorjaIP/budget-app/issues"
Source = "https://github.com/BorjaIP/budget-app"

[tool.hatch.version]
path = "budget_app/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/budget_app tests}"

[tool.coverage.run]
source_pkgs = ["budget_app", "tests"]
branch = true
parallel = true
omit = ["budget_app/__init__.py"]

[tool.coverage.paths]
budget_app = ["src/budget_app", "*/budget-app/src/budget_app"]
tests = ["tests", "*/budget-app/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
